// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transfer should render correctly 1`] = `
<div class="ant-transfer">
  <div class="ant-transfer-list">
    <div class="ant-transfer-list-header">
      <label class="ant-checkbox-wrapper"><span class="ant-checkbox ant-checkbox-checked"><input type="checkbox" checked="checked" class="ant-checkbox-input"><span class="ant-checkbox-inner"></span></span>
      </label><span class="ant-transfer-list-header-selected"><span>1/2 items</span><span class="ant-transfer-list-header-title"></span></span>
    </div>
    <div class="ant-transfer-list-body"><span tag="ul" class="ant-transfer-list-content"><li class="ant-transfer-list-content-item"><label class="ant-checkbox-wrapper"><span class="ant-checkbox ant-checkbox-checked"><input type="checkbox" checked="checked" class="ant-checkbox-input"><span class="ant-checkbox-inner"></span></span>
      </label><span></span></li>
      <li class="ant-transfer-list-content-item ant-transfer-list-content-item-disabled">
        <label class="ant-checkbox-wrapper"><span class="ant-checkbox ant-checkbox-disabled"><input type="checkbox" disabled="disabled" class="ant-checkbox-input"><span class="ant-checkbox-inner"></span></span>
        </label><span></span></li>
      </span>
      <div class="ant-transfer-list-body-not-found">Not Found</div>
    </div>
  </div>
  <div class="ant-transfer-operation">
    <button type="button" class="ant-btn ant-btn-primary ant-btn-sm">
      <i class="anticon anticon-right"></i>
    </button>
    <button type="button" disabled="disabled" class="ant-btn ant-btn-primary ant-btn-sm">
      <i class="anticon anticon-left"></i>
    </button>
  </div>
  <div class="ant-transfer-list">
    <div class="ant-transfer-list-header">
      <label class="ant-checkbox-wrapper"><span class="ant-checkbox"><input type="checkbox" class="ant-checkbox-input"><span class="ant-checkbox-inner"></span></span>
      </label><span class="ant-transfer-list-header-selected"><span>1 item</span><span class="ant-transfer-list-header-title"></span></span>
    </div>
    <div class="ant-transfer-list-body"><span tag="ul" class="ant-transfer-list-content"><li class="ant-transfer-list-content-item"><label class="ant-checkbox-wrapper"><span class="ant-checkbox"><input type="checkbox" class="ant-checkbox-input"><span class="ant-checkbox-inner"></span></span>
      </label><span></span></li>
      </span>
      <div class="ant-transfer-list-body-not-found">Not Found</div>
    </div>
  </div>
</div>
`;

exports[`Transfer should show sorted targetkey 1`] = `
<div class="ant-transfer">
  <div class="ant-transfer-list">
    <div class="ant-transfer-list-header">
      <label class="ant-checkbox-wrapper"><span class="ant-checkbox"><input type="checkbox" class="ant-checkbox-input"><span class="ant-checkbox-inner"></span></span>
      </label><span class="ant-transfer-list-header-selected"><span>1 item</span><span class="ant-transfer-list-header-title"></span></span>
    </div>
    <div class="ant-transfer-list-body"><span tag="ul" class="ant-transfer-list-content"><li title="a" class="ant-transfer-list-content-item"><label class="ant-checkbox-wrapper"><span class="ant-checkbox"><input type="checkbox" class="ant-checkbox-input"><span class="ant-checkbox-inner"></span></span>
      </label><span>a</span></li>
      </span>
      <div class="ant-transfer-list-body-not-found">Not Found</div>
    </div>
  </div>
  <div class="ant-transfer-operation">
    <button type="button" disabled="disabled" class="ant-btn ant-btn-primary ant-btn-sm">
      <i class="anticon anticon-right"></i>
    </button>
    <button type="button" disabled="disabled" class="ant-btn ant-btn-primary ant-btn-sm">
      <i class="anticon anticon-left"></i>
    </button>
  </div>
  <div class="ant-transfer-list">
    <div class="ant-transfer-list-header">
      <label class="ant-checkbox-wrapper"><span class="ant-checkbox"><input type="checkbox" class="ant-checkbox-input"><span class="ant-checkbox-inner"></span></span>
      </label><span class="ant-transfer-list-header-selected"><span>2 items</span><span class="ant-transfer-list-header-title"></span></span>
    </div>
    <div class="ant-transfer-list-body"><span tag="ul" class="ant-transfer-list-content"><li title="c" class="ant-transfer-list-content-item"><label class="ant-checkbox-wrapper"><span class="ant-checkbox"><input type="checkbox" class="ant-checkbox-input"><span class="ant-checkbox-inner"></span></span>
      </label><span>c</span></li>
      <li title="b" class="ant-transfer-list-content-item">
        <label class="ant-checkbox-wrapper"><span class="ant-checkbox"><input type="checkbox" class="ant-checkbox-input"><span class="ant-checkbox-inner"></span></span>
        </label><span>b</span></li>
      </span>
      <div class="ant-transfer-list-body-not-found">Not Found</div>
    </div>
  </div>
</div>
`;
